# fold_db_node

./: .gitignore  .task-blocked.md  CLAUDE.md  Cargo.toml  README.md  build.rs  build_macos_app.sh  check.out  environments.json  fold_db_node_markdown_crate_migration.md  fold_db_node_migration.md  install.sh  org-test.sh  package-lock.json  run.sh  run_dev.sh  run_prod.sh  run_tauri_dev.sh  test_discovery_e2e.sh  test_rehydration.sh
.cargo/: config.toml
.folddb/: e2e.key
.folddb-node1/config/: identity_card.json  node_config.json
.folddb-node1/data/: db
.folddb-node2/config/: identity_card.json  node_config.json
.folddb-node2/data/: db
.folddb/config/: ingestion_config.json  node_config.json
.folddb/data/: db
.github/workflows/: auto-merge.yml  auto-update-branches.yml  bump-schema-service.yml  ci-tests.yml  e2e-cloud.yml  gh-pat-health.yml  nightly-ingestion.yml  nightly-integration.yml  nightly-qa-dogfood.yml  release-dmg.yml  release.yml  tauri-release.yml  weekly-release-tag.yml  weekly-release.yml
config/: node_config.json.backup
docs/: RELEASING.md  ingestion_architecture_review.md  macos-code-signing.md  notarized-dmg-setup.md
docs/designs/: fingerprints_phase1_audit.md  schema_service_s3.md
docs/observability/: e2e-trace-propagation-test.md  egress-classification-notes.md  ingress-middleware-notes.md  log-to-tracing-migration-fdnode.md  redaction-lint.md  sentry-e2e-test-notes.md
dogfood/memory/: README.md  dogfood-memory.sh  fixtures.json
examples/: test_timeout.rs
hooks/: pre-commit
manim/: v2_brutalist_video.py  v2_generate_assets.py
prod_config/: node_config.json
prod_data/: db  snap.0000000000852371
sample_data/: README.md  blog_posts.json  meeting_notes.txt  products.csv  users.json
sample_data/calendar/: google_calendar.json  personal_events.json  work_meetings.csv
sample_data/config/: .bashrc  settings.json
sample_data/contacts/: address_book.json
sample_data/finance/: bank_statement_jan2025.csv  investments.json
sample_data/health/: blood_sugar_log.json  doctor_visits.txt  medications.json
sample_data/insurance/: auto_policy.json
sample_data/journal/: 2025-01-15.txt  2025-01-20.txt
sample_data/notes/: apple_notes.json  meeting_notes.json  obsidian_notes.json
sample_data/recipes/: grandmas_cookies.txt  meal_plan.csv
sample_data/taxes_2024/: charitable_donations.csv  w2_summary.json
sample_data/travel/: packing_list.txt
scripts/: cargo-update.sh  get-env-url.sh  install-hooks.sh  legacy-jsx-allowlist.txt  lint-cargo-lock-sources.sh  lint-no-hardcoded-urls.sh  lint-no-new-jsx.sh  lint-redaction.sh  lint-rev-pin-format.sh  lint-spawn-instrument.sh  lint-tracing-egress.sh  qa-harness-dogfood.sh  qa-harness.sh  smoke-test-dmg.sh  test-sample-ingestion.sh
scripts/qa-fixtures/: calendar.schema.json  contacts.schema.json  files.schema.json  notes.schema.json  photos.schema.json  reminders.schema.json
scripts/tests/: qa-harness-dogfood-verdict-test.sh
snapshots/dogfood_apple_v2_20260331_100853_data/: .device_id  snap.000000000001DC21
snapshots/dogfood_apple_v2_20260331_100853_schema_registry/: db  snap.000000000003295E
snapshots/dogfood_sample_v3_20260407_205506_schema_registry/: db
snapshots/dogfood_sample_v3_20260407_205538_schema_registry/: db
snapshots/dogfood_sample_v4_20260407_222114_data/: snap.0000000000B4EA7D
snapshots/dogfood_sample_v4_20260407_222114_schema_registry/: db  snap.0000000000017201
src/: endpoints.rs  identity.rs  keychain.rs  lib.rs  node_config_store.rs  observability_setup.rs  secure_store.rs  sensitive_io.rs  user_profile.rs
src/discovery/: async_query.rs  background_poller.rs  calendar_sharing.rs  config.rs  connection.rs  digest.rs  field_privacy.rs  interests.rs  mod.rs  moments.rs  pseudonym.rs  publisher.rs  received_card.rs  tests.rs  types.rs
src/fingerprints/: auto_propose.rs  canonical_names.rs  face_ann_cache.rs  ingest_photo.rs  ingest_text.rs  ingestion_error_writer.rs  keys.rs  mod.rs  planned_record.rs  registration.rs  resolver.rs  schema_definitions.rs  schema_policy.rs  schemas.rs  self_identity.rs  writer.rs
src/fold_node/: config.rs  embedding.rs  mod.rs  node.rs  response_types.rs  schema_client.rs  trigger_adapter.rs  wasm_compiler.rs
src/handlers/: admin.rs  auth.rs  caller.rs  conflict.rs  discovery.rs  feed.rs  llm.rs  (+14 more)
src/server/static-react/src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
src/server/static-react/src-tauri/.cargo/: config.toml
src/server/static-react/src-tauri/icons/: icon.icns
src/server/static-react/src-tauri/src/: lib.rs  main.rs
test-framework/: .gitignore  README.md  driver.md  run-scenario.sh  worker.md
test-framework/crates/folddb-test-actions/: Cargo.toml
test-framework/crates/folddb-test-actions/src/: main.rs
tests/: agent_ingestion_test.rs  apple_import_integration_test.rs  apple_sync_config_test.rs  array_field_roundtrip_test.rs  calendar_notes_canonicalization_test.rs  canonical_field_registry_test.rs  cli_integration_test.rs  create_view_agent_tool_test.rs  create_view_wasm_compiler_test.rs  data_classification_test.rs  detect_faces_handler_test.rs  discovery_trust_test.rs  dynamodb_mutation_perf.rs  fingerprints_diagnostics_comprehensive_test.rs  fingerprints_personas_handler_test.rs  fingerprints_registration_test.rs  fingerprints_resolver_test.rs  fingerprints_schema_roundtrip_test.rs  fingerprints_self_identity_test.rs  fingerprints_writer_test.rs  identity_sharing_fence_test.rs  image_ingestion_keys_test.rs  ingest_tweets_test.rs  memory_consolidation_test.rs  memory_roundtrip_test.rs  mutation_perf_investigation.rs  mutation_performance_test.rs  node_startup_schema_loading.rs  observability_e2e_soak.rs  observability_e2e_trace_propagation.rs  observability_sentry_error_e2e.rs  openapi_roundtrip_test.rs  org_lifecycle_test.rs  paintings_schema_consolidation_test.rs  process_results_subscriber_test.rs  range_key_exact_filter_test.rs  range_molecule_persistence_test.rs  schema_expansion_fresh_db_test.rs  schema_service_builtin_schemas_test.rs  schema_service_client_e2e_test.rs  (+24 more)
(+610 files in other folders)
