[package]
name = "fold_db_node"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = []
ts-bindings = ["fold_db/ts-bindings"]
os-keychain = ["dep:keyring"]
test-utils = ["fold_db/test-utils"]
transform-wasm = ["fold_db/transform-wasm"]
face-detection = ["fold_db/face-detection"]

[dependencies]
# Core database library
fold_db = { git = "https://github.com/EdgeVector/fold_db.git", branch = "feature/sharing-engine", features = ["cli"] }

# HTTP Server
actix-web = "4.3"
actix-http = "3"
actix-cors = "0.6"
actix-multipart = "0.6"

# CLI
clap = { version = "4.4", features = ["derive", "string"] }
clap_complete = "4.4"
indicatif = "0.17"
comfy-table = "7.1"
dialoguer = "0.11"
console = "0.15"

# File processing
file_to_markdown = { git = "https://github.com/EdgeVector/file_to_markdown.git", branch = "master" }
csv = "1.3"
mime_guess = "2.0"
kamadak-exif = "0.5"
rust-embed = "8.0"
dirs = "5"

# Sled (used directly by schema_service)
sled = "0.34"

# Shared deps (also in fold_db, but needed directly)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "sync", "time", "fs", "signal", "io-util"] }
log = { version = "0.4", features = ["std"] }
toml = "0.8"
tempfile = "3.8"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json", "multipart", "blocking"] }
futures = "0.3"
futures-util = "0.3"
sha2 = "0.10"
base64 = "0.21.0"
x25519-dalek = { version = "2", features = ["static_secrets"] }
urlencoding = "2"
hkdf = "0.12"
hmac = "0.12"
aes-gcm = "0.10"
regex = "1"
rand = "0.8"
tokio-stream = { version = "0.1", features = ["sync"] }
once_cell = "1"
async-trait = "0.1"

# Approximate nearest neighbor index for the face fingerprint cache.
# Pure-Rust HNSW implementation, suitable for in-memory 512-dim
# cosine similarity search. See src/fingerprints/face_ann_cache.rs.
instant-distance = "0.6"

thiserror = "1.0"
keyring = { version = "3", optional = true }
colored = "3.1.1"
libc = "0.2"
ed25519-dalek = { version = "2.0", features = ["rand_core"] }

# OpenAPI generation
utoipa = { version = "4", features = ["actix_extras"] }
hex = "0.4.3"
bip39 = "2"
geohash = "0.13"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "full"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
assert_cmd = "2"
predicates = "3"
actix-web = "4.3"
wat = "1"

[lib]
name = "fold_db_node"
path = "src/lib.rs"

[[bin]]
name = "folddb_server"
path = "src/bin/folddb_server.rs"

[[bin]]
name = "schema_service"
path = "src/bin/schema_service.rs"

[[bin]]
name = "openapi_dump"
path = "src/bin/openapi_dump.rs"

[[bin]]
name = "folddb"
path = "src/bin/folddb/main.rs"

[[bin]]
name = "folddb_mcp"
path = "src/bin/folddb_mcp/main.rs"
