[package]
name = "fold_db_node"
version = "0.3.1"
edition = "2021"
publish = false
build = "build.rs"

[features]
default = []
ts-bindings = ["fold_db/ts-bindings", "dep:ts-rs"]
os-keychain = ["dep:keyring"]
test-utils = ["fold_db/test-utils"]
transform-wasm = ["fold_db/transform-wasm"]
face-detection = ["fold_db/face-detection"]

[dependencies]
# Core database library
fold_db = { git = "https://github.com/EdgeVector/fold_db.git", rev = "a0434b2539c24a955649b19d8aa6b0b532c4c1cc", features = ["cli"] }

# Schema service registry brain. Phase 2 T2: all former
# `fold_db::schema_service::*` types come from here now. Git dep pinned
# via Cargo.lock — local dev overrides to sibling path via
# `.cargo/config.toml` so parallel schema_service hacking still works.
schema_service_core = { git = "https://github.com/EdgeVector/schema_service.git", branch = "main" }

# Typed /v1/* HTTP client for the schema service. Phase 3 T2: replaces the
# in-tree `src/fold_node/schema_client.rs`. Same git-dep + local patch
# pattern as `schema_service_core`.
schema_service_client = { git = "https://github.com/EdgeVector/schema_service.git", branch = "main" }

# Shared telemetry substrate. Lives in fold_db's workspace (`crates/observability`)
# but pinned independently here because the fold_db `rev` above is pre-workspace
# and lockstep-bumped with schema_service. observability has no `fold_db`
# dep itself, so a divergent rev avoids the dual-`fold_db` trap CLAUDE.md
# warns about. See `docs/observability/ingress-middleware-notes.md`.
observability = { git = "https://github.com/EdgeVector/fold_db.git", rev = "8c6af2a0537d642516417f2666cb2c238daf09b9" }

# HTTP Server
actix-web = "4.3"
actix-http = "3"
actix-cors = "0.6"
actix-multipart = "0.6"
tracing-actix-web = "0.7"

# CLI
clap = { version = "4.4", features = ["derive", "string"] }
clap_complete = "4.4"
comfy-table = "7.1"
dialoguer = "0.11"
console = "0.15"

# File processing
file_to_markdown = { git = "https://github.com/EdgeVector/file_to_markdown.git", branch = "master" }
csv = "1.3"
mime_guess = "2.0"
kamadak-exif = "0.5"
rust-embed = "8.0"
dirs = "5"

# Sled (used directly by schema_service)
sled = "0.34"

# Shared deps (also in fold_db, but needed directly)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ts-rs = { version = "10.1.0", optional = true, features = ["uuid-impl", "chrono-impl"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "sync", "time", "fs", "signal", "io-util"] }
log = { version = "0.4", features = ["std"] }
tracing = "0.1"
# Versions match observability's Cargo.toml so cargo unifies them in the
# dep graph (otherwise we'd link two copies of opentelemetry types and
# `set_parent` calls wouldn't typecheck).
tracing-opentelemetry = "0.28"
opentelemetry = "0.27"
# observability::propagation::extract_parent_context takes &http::HeaderMap
# (1.x). actix-http re-exports the same `http` crate's HeaderName / Value
# types but its own HeaderMap is a different container, so we have to
# rebuild an http::HeaderMap on ingress.
http = "1"
toml = "0.8"
tempfile = "3.8"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json", "multipart", "blocking"] }
futures = "0.3"
futures-util = "0.3"
sha2 = "0.10"
base64 = "0.21.0"
x25519-dalek = { version = "2", features = ["static_secrets"] }
urlencoding = "2"
hkdf = "0.12"
hmac = "0.12"
aes-gcm = "0.10"
regex = "1"
rand = "0.8"
tokio-stream = { version = "0.1", features = ["sync"] }
once_cell = "1"
async-trait = "0.1"

# Approximate nearest neighbor index for the face fingerprint cache.
# Pure-Rust HNSW implementation, suitable for in-memory 512-dim
# cosine similarity search. See src/fingerprints/face_ann_cache.rs.
instant-distance = "0.6"

thiserror = "1.0"
keyring = { version = "3", optional = true }
colored = "3.1.1"

# Concurrent hash map for AiMetricsStore (per-role atomic counters).
dashmap = "6"
# Lightweight mutex for last_called_at timestamp on RoleMetrics.
parking_lot = "0.12"
libc = "0.2"
ed25519-dalek = { version = "2.0", features = ["rand_core"] }

# OpenAPI generation
utoipa = { version = "4", features = ["actix_extras"] }
hex = "0.4.3"
bip39 = "2"
geohash = "0.13"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "full"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
assert_cmd = "2"
predicates = "3"
actix-web = "4.3"
wat = "1"
# In-process test fixture for spinning up a real schema service. Same
# git-dep + local patch pattern as the production deps above. Never
# pulled into non-dev builds.
schema_service_server_http = { git = "https://github.com/EdgeVector/schema_service.git", branch = "main" }
# Dev-only: assemble a tracing subscriber + OpenTelemetry layer in the
# otel middleware test so set_parent has somewhere to land.
opentelemetry_sdk = "0.27"
tracing-subscriber = "0.3"
# test-utils exposes MockEmbeddingModel for test fixtures that call
# SchemaServiceState::new() directly. Re-declared here only to opt in
# to the feature for test builds — Cargo unifies with the [dependencies]
# entry, same git source.
schema_service_core = { git = "https://github.com/EdgeVector/schema_service.git", branch = "main", features = ["test-utils"] }
# Mock HTTP server for the Phase 2 D1 headline trace-propagation test
# (tests/observability_e2e_trace_propagation.rs). Stands in for the
# real schema service so the test can capture the egress traceparent
# header without spawning a second observable in the same process.
wiremock = "0.6"

[lib]
name = "fold_db_node"
path = "src/lib.rs"

[[bin]]
name = "folddb_server"
path = "src/bin/folddb_server.rs"

[[bin]]
name = "openapi_dump"
path = "src/bin/openapi_dump.rs"

[[bin]]
name = "folddb"
path = "src/bin/folddb/main.rs"

[[bin]]
name = "folddb_mcp"
path = "src/bin/folddb_mcp/main.rs"
