[package]
name = "folddb-test-actions"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "folddb-test-actions"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
