[package]
name = "fold-app"
version = "0.1.14"
description = "Fold - Personal Database for Data Sovereignty"
authors = ["Tom Tang <tom@folddb.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/shiba4life/fold_db"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "fold_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
# Fold libraries
fold_db = { path = "../../../../../fold_db" }
fold_db_node = { path = "../../../../../fold_db_node" }

# Tauri dependencies
tauri = { version = "2.10.2", features = ["devtools"] }
tauri-plugin-log = "2.0.0"
tauri-plugin-shell = "2.0.0"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"

# Async runtime
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "sync", "time"] }

# Serialization
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

# Logging
log = "0.4"

# System utilities
dirs = "5.0"
